--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.21.2"
+    "rollup-plugin-typescript2": "^0.21.2",
+    "typescript": "^3.5.2"
   }
 }
