--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
   "author": "KimotoYanke <kimotoyanke@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/generator": "^7.5.0",
+    "@babel/template": "^7.4.4",
+    "@babel/types": "^7.5.0",
+    "@types/babel__generator": "^7.0.2",
+    "@types/babel__template": "^7.0.2",
+    "@types/yaml": "^1.0.2",
     "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.21.2",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "yaml": "^1.6.0"
+  },
+  "scripts": {
+    "type": "ts-node ./definitions/to-type.ts"
   }
 }
