--- a/definitions/con.yml
+++ b/definitions/con.yml
@@ -1,4 +1,4 @@
-CON:
+CForm:
   動詞:
     自立:
       五段:
@@ -57,3 +57,57 @@ CON:
     "*":
       五段:
         ラ行アル:
+        ラ行ゴザル:
+      形容詞:
+        イ段:
+      特殊:
+        不変化型:
+        ナイ:
+        タ:
+        ダ:
+        デス:
+        ドス:
+        ジャ:
+        マス:
+        ヌ:
+        ヤ:
+      文語:
+        ベシ:
+        ゴトシ:
+        ナリ:
+        マジ:
+        シム:
+        キ:
+        ケリ:
+        ル:
+        リ:
+
+CType:
+  動詞:
+    基本形:
+    未然形:
+    連用形:
+    仮定形:
+    命令i:
+    命令e:
+    命令yo:
+    命令ro:
+    ベキ接続:
+    仮定縮約1:
+    体言接続:
+    体言接続特殊:
+    体言接続特殊2:
+  形容詞:
+    基本形:
+    未然ヌ接続:
+    未然ウ接続:
+    連用タ接続:
+    連用テ接続:
+    連用ゴザイ接続:
+    体言接続:
+    仮定形:
+    命令:
+    文語基本形:
+    仮定縮約1:
+    仮定縮約2:
+    ガル接続:
