--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/babel__generator": "^7.0.2",
     "@types/babel__template": "^7.0.2",
     "@types/yaml": "^1.0.2",
+    "prettier": "^1.18.2",
     "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-json": "^4.0.0",
