--- a/type-generator/ipadic/con.yml
+++ b/type-generator/ipadic/con.yml
@@ -86,7 +86,14 @@ CType:
   動詞:
     基本形:
     未然形:
+    未然レル接続:
+    未然ナイ接続:
+    未然ヌ接続:
+    未然ウ接続:
     連用形:
+    連用マス接続:
+    連用タイ接続:
+    連用タ接続:
     仮定形:
     命令i:
     命令e:
