--- a/type-generator/ipadic/con.yml
+++ b/type-generator/ipadic/con.yml
@@ -20,6 +20,15 @@ CType:
         −スル:
         −ズル:
       一段:
+        null:
+        得ル:
+      四段:
+        ハ行:
+      ラ変:
+      上二:
+        ハ行:
+      下二:
+        ア行:
     非自立:
       五段:
         カ行イ音便:
